--- a/public/index.html
+++ b/public/index.html
@@ -148,9 +148,7 @@
             <!--Image Detail Container-->
             <div class="absolute px-6 bottom-8">
               <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
-              <p
-                class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
-                Lorem
+              <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
                 A veteran assigned to extract Earth's remaining resources begins to question...</p>
               <!--Icons Container-->
               <div
@@ -167,9 +165,7 @@
             <!--Image Detail Container-->
             <div class="absolute px-6 bottom-8">
               <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Skyfall</h3>
-              <p
-                class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
-                Lorem
+              <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
                 James Bond's loyalty to M is tested when her past comes back to haunt her. When MI6...</p>
               <!--Icons Container-->
               <div
@@ -186,9 +182,7 @@
             <!--Image Detail Container-->
             <div class="absolute px-6 bottom-8">
               <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Into The Wild</h3>
-              <p
-                class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
-                Lorem
+              <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
                 After graduating from Emory University, top student and athlete Christopher McCandless...</p>
               <!--Icons Container-->
               <div
@@ -207,7 +201,7 @@
               <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Mulholland Drive</h3>
               <p
                 class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
-                Lorem
+                
                 After a car wreck on the winding Mulholland Drive renders a woman amnesiac...</p>
               <!--Icons Container-->
               <div
@@ -226,7 +220,6 @@
               <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Blade Runner</h3>
               <p
                 class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
-                Lorem
                 A blade runner must pursue and terminate four replicants who stole...</p>
               <!--Icons Container-->
               <div
@@ -245,7 +238,6 @@
               <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">The Forest</h3>
               <p
                 class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-gray-700  dark:text-gega-grey">
-                Lorem
                 As the lone survivor of a passenger jet crash, you find yourself in a mysterious...</p>
               <!--Icons Container-->
               <div
